fix bug in z-index layout

--- a/styles/component/nav/Nav.module.css
+++ b/styles/component/nav/Nav.module.css
@@ -1,7 +1,7 @@
 .wrapNav{
   position: fixed ;
   width: 100%;      
-  /* background-color: red; */
+  background-color: white;
 }
 
 .header{  
